# SEP4-IOT

./: .gitignore  SEP4-IOT.atsln
.github/workflows/: run_tests.yaml
SEP4-IOT/: CMakeLists.txt  LoRaWANHandler.c  SEP4-IOT.componentinfo.xml  SEP4-IOT.cproj  SensorData.c  SensorData.h  main.c
SEP4-IOT/Config/: LoraWAN_Config_Template.txt
SEP4-IOT/DataModels/: BreadConfig.c  BreadConfig.h  SensorData.c  SensorData.h  SensorDefinitions.h
SEP4-IOT/Debug/: Makefile  SEP4-IOT.map
SEP4-IOT/PlantUML/: classDiagram.puml  sequenceDiagram.puml
SEP4-IOT/Tasks/: ClimateControl.c  ClimateControl.h  CloudDownlink.c  CloudDownlink.h  CloudUplink.c  CloudUplink.h  DataCollection.c  DataCollection.h  HIH8120DataCollection.c  HIH8120DataCollection.h  MHZ19DataCollection.c  MHZ19DataCollection.h  TemperatureTransmit.c  TemperatureTransmit.h
SEP4-IOT/Util/: LoRaWANUtil.c  LoRaWANUtil.h  MutexDefinitions.h
SEP4-IOT/test/: CMakeLists.txt  main.cpp
SEP4-IOT/test/basicTest/: CMakeLists.txt  test1.cpp
Test/: CMakeLists.txt  CMakelists.txt  ClimateControlTest.cpp  CloudDownlinkTests.cpp  CloudUplinkTest.cpp  SensorDataTests.cpp  temperatureTransmitTest.cpp  tests_SEP4-IOT.cpp
Test/FreeRTOS_defs/: FreeRTOS.h
